[package]
name = "farmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = {version = "0.1.3", features = ["with_serde"]}
inputbot = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
stopwatch = "0.0.7"
